# Signalforge

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  package.json  pyproject.toml
config/: paper.yaml  research.yaml
scripts/: audit_top_experiment.py  build_broad_universe.py  build_research_frame.py  check_mlx_acceleration.py  compact_paper_ledger.py  compare_model_summaries.py  download_yahoo_prices.py  enrich_fundamentals.py  evaluate_exit_rules.py  migrate_to_db.py  promote_discovery_candidates.py  rebuild_daily_history.py  run_backtest.py  run_bankroll_sensitivity.py  run_candidate_stability.py  run_concentration_sensitivity.py  run_daily_operations.py  run_daily_paper_workflow.py  run_daily_review_bundle.py  run_event_risk_sensitivity.py  run_experiments.py  run_intraday_risk_monitor.py  run_paper_actionability_report.py  run_paper_monitor.py  run_paper_portfolio.py  run_paper_realism_audit.py  run_paper_style_backtest.py  run_paper_tracking_report.py  run_portfolio_backtest.py  run_rd_experiments.py  run_score_threshold_sensitivity.py  run_stock_discovery.py  run_symbol_discovery_rd.py  run_visibility_report.py  run_workflow.py  train_baseline.py  update_paper_ledger.py
tests/: test_backtest.py  test_compact_paper_ledger.py  test_daily_operations.py  test_daily_paper_workflow.py  test_daily_review_bundle.py  test_data_features_research.py  test_db.py  test_diagnostics.py  test_discovery.py  test_discovery_backtest.py  test_discovery_report.py  test_ensemble.py  test_experiments.py  test_features_expanded.py  test_fundamentals.py  test_hyperopt.py  (+21 more)
(+45 files in other folders)
